# RealmOfIlludia

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  PathStatement.txt  vcpkg.json
Cmake/: SpirVTools.cmake  TheForge.cmake  TheForgeUtils.cmake  ozz-animation.cmake
Src/: MessageTypes.proto
Src/Client/: WBIGame.cpp
Src/Client/ClientNetwork/: ClientNetwork.cpp  ClientNetwork.h
Src/Common/: MessageTypes.cpp  MessageTypes.h
Src/Server/: Server.cpp  ServerGameSystem.cpp  ServerGameSystem.h
Src/Server/ServerNetwork/: ServerNetwork.cpp  ServerNetwork.h
